[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/UI_Icons/leaderboard_icon.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/font_tiny.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/Fonts/font_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Scripts/NameInput.gd" type="Script" id=4]
[ext_resource path="res://Assets/UI_Icons/arrow_icon.png" type="Texture" id=5]
[ext_resource path="res://Assets/Styles/Button.tres" type="StyleBox" id=6]

[node name="NameInput" type="Node2D"]
script = ExtResource( 4 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[node name="WakeUpHeroku" type="HTTPRequest" parent="."]

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 50.0
margin_top = 50.0
color = Color( 0.027451, 0.0627451, 0.0745098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect"]
anchor_right = 1.0
margin_bottom = 65.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="ColorRect/HBoxContainer"]
margin_right = 200.0
margin_bottom = 65.0
rect_min_size = Vector2( 200, 0 )
custom_styles/focus = ExtResource( 6 )
custom_fonts/font = ExtResource( 2 )
max_length = 10
context_menu_enabled = false
right_icon = ExtResource( 1 )
placeholder_text = "thy name"
caret_blink = true

[node name="Button" type="Button" parent="ColorRect/HBoxContainer"]
margin_left = 204.0
margin_right = 367.0
margin_bottom = 65.0
custom_styles/focus = ExtResource( 6 )
custom_fonts/font = ExtResource( 3 )
text = "begin"
icon = ExtResource( 5 )
flat = true

[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="WakeUpHeroku" to="." method="_on_WakeUpHeroku_request_completed"]
[connection signal="text_changed" from="ColorRect/HBoxContainer/LineEdit" to="." method="_on_LineEdit_text_changed"]
[connection signal="pressed" from="ColorRect/HBoxContainer/Button" to="." method="_on_Button_pressed"]
